<resources>
    <string name="app_name">Mychelin_Page</string>
    <string name="app_title">MYCHELIN GUIDE</string>
    <string name="menu">Menu</string>
    <string name="search">Search</string>
    <string name="home">home</string>
    <string name="booking">booking</string>
    <string name="profile">profile</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Log In</string>
    <string name="register_button">Register</string>
    <string name="create_account">Create an Account</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="card1_text">Recent visits</string>
    <string name="card2_text">Expense Summary</string>
    <string name="card3_text">Additional Info</string>
    <string name="settings_icon_description">Settings</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="save_changes">Save Changes</string>
    <string name="restaurant_icon">Restaurant Icon</string>
    <string name="restaurant_info">Restaurant Info</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="amount_spent">Amount Spent</string>
    <string name="mychelin_stars">MYCHELIN Stars</string>
    <string name="visit_count">Visit Count</string>
    <string name="submit">Submit</string>
    <string name="hint_enter_restaurant_name">Enter restaurant name</string>
    <string name="hint_enter_menu">Enter menu</string>
    <string name="hint_enter_price">Enter price</string>
    <string name="hint_enter_visit_count">Enter visit count</string>
    <string name="total_spent">Total Spent</string>
    <string name="hint_total_spent">Total amount spent</string>
    <string name="reservation">Reservation</string>
    <string-array name="filter_options">
        <item>All Restaurants</item>
        <item>Mychelin 3 Stars</item>
        <item>Mychelin 2 Stars</item>
        <item>Mychelin 1 Star</item>
    </string-array>
    <string-array name="expense_filter_options">
        <item>Monthly</item>
        <item>Daily</item>
    </string-array>
</resources>